Bug 892547 - Sheets on Mac don't have a default option selected. r=enndeakin